--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,9 @@
 
   <meta name="description" content="Data Tracker" />
   <base href="/">
-
+  <link rel="stylesheet" type="text/css" href="/node_modules/primeicons/primeicons.css" />
+  <link rel="stylesheet" type="text/css" href="/node_modules/primeng/resources/themes/nova-light/theme.css" />
+  <link rel="stylesheet" type="text/css" href="/node_modules/primeng/resources/primeng.min.css" />
 </head>
 <body>
   <app-root>Loading...</app-root>
